--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 # for snake game
 pygame==2.5.2
-numpy==1.26.2
+numpy==1.21.6
+
+# for plot
+matplotlib==3.5.3
+ipython==7.34.0
 
 # for pytorch
-torch==2.1.2
-torchvision==0.16.2
-torchaudio==2.1.2 # likely not useful
+torch==1.13.1
+torchvision==0.14.1
+torchaudio==0.13.1 # likely not useful
